manifest/apps/staging/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goapp-service
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: goapp
