manifest/apps/staging/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goapp-ingress
  namespace: backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: adfec95fa05ca4a0492659ba105f6457-1375272232.ap-southeast-3.elb.amazonaws.com
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: goapp-service
                port:
                  number: 80
